# agentic-app-summarizer

./: .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py  openai_client.py
app/configs/: app_configs.py
static/: index.html
